Fixed alignment of bottom navigation for wider devices

--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -3,6 +3,7 @@
 }
 
 .app-nav {
+  align-items: center;
   background-color: var(--primary-color);
   bottom: 0;
   box-shadow: 0 -5px 5px rgba(0, 0, 0, .5);
