--- a/src/pages/navigation1/style.css
+++ b/src/pages/navigation1/style.css
@@ -5,6 +5,7 @@
 }
 
 .navigation1 {
+  align-items: center;
   background-color: var(--primary-color);
   box-shadow: 0 5px 5px rgba(0, 0, 0, .5);
   display: flex;
@@ -16,13 +17,13 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  margin: auto;
   max-width: 1000px;
 }
 
 @media(min-width: 500px) {
   .navigation1-list {
     flex-direction: row;
+    margin: auto;
     overflow-x: auto;
     text-align: center;
   }
